# prmt

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/: FUNDING.yml
.github/workflows/: aur.yml  ci.yml  fuzz.yml  openwrt.yml  release.yml
benches/: comprehensive_bench.rs  prompt_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_renderer.rs
packaging/arch/: aur-push.sh
src/: cache.rs  detector.rs  error.rs  executor.rs  lib.rs  main.rs  memo.rs  module_trait.rs  modules.rs  parser.rs  registry.rs  style.rs  template.rs
src/modules/: bun.rs  deno.rs  elixir.rs  env.rs  fail.rs  git.rs  go.rs  host.rs  node.rs  ok.rs  path.rs  python.rs  rust.rs  time.rs  utils.rs  whoami.rs
tests/: integration_test.rs  parser_test.rs
